--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <!-- daisyUI and tailwind CDN -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
-    
+
     <!-- font awesome CDN -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Hockey</title>
 </head>
 
@@ -49,11 +51,56 @@
                     </ul>
                 </div>
                 <div class="navbar-end flex space-x-5">
-                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <h6> <i class="fa-solid fa-magnifying-glass"></i></h6>
                     <a class="btn bg-[#FF4240] text-white text-lg font-bold">Get Ticket</a>
                 </div>
             </div>
         </nav>
+
+        <!-- carousel -->
+        <div class="relative px-3">
+            <div class="carousel w-full rounded-xl lg:h-[550px]">
+                <div id="slide1" class="carousel-item relative w-full">
+                    <img src="Images/1.png" class="w-full" />
+                    <div class="absolute bottom-6 left-32 lg:left-6 flex space-x-3 justify-between">
+                        <a href="#slide4" class="btn btn-circle bg-slate-900 text-white">❮</a>
+                        <a href="#slide2" class="btn btn-circle bg-slate-900 text-white">❯</a>
+                    </div>
+                </div>
+                <div id="slide2" class="carousel-item relative w-full">
+                    <img src="Images/2.png"
+                        class="w-full" />
+                    <div class="absolute bottom-6 left-32 lg:left-6  flex space-x-3 justify-between">
+                        <a href="#slide1" class="btn btn-circle bg-slate-900 text-white">❮</a>
+                        <a href="#slide3" class="btn btn-circle bg-slate-900 text-white">❯</a>
+                    </div>
+                </div>
+                <div id="slide3" class="carousel-item relative w-full">
+                    <img src="Images/3.png"
+                        class="w-full" />
+                    <div class="absolute bottom-6 left-32 lg:left-6  flex space-x-3 justify-between">
+                        <a href="#slide2" class="btn btn-circle bg-slate-900 text-white">❮</a>
+                        <a href="#slide4" class="btn btn-circle bg-slate-900 text-white">❯</a>
+                    </div>
+                </div>
+                <div id="slide4" class="carousel-item relative w-full">
+                    <img src="Images/4.png"
+                        class="w-full" />
+                    <div class="absolute bottom-6 left-32 lg:left-6  flex space-x-3 justify-between">
+                        <a href="#slide3" class="btn btn-circle bg-slate-900 text-white">❮</a>
+                        <a href="#slide1" class="btn btn-circle bg-slate-900 text-white">❯</a>
+                    </div>
+                </div>
+
+            </div>
+            <div
+                class=" lg:w-1/3 lg:absolute  bottom-12 right-12 bg-[#131318] py-12 px-6 text-white space-y-6 rounded-xl">
+                <h1>Meet all the heroes from the field</h1>
+                <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in
+                    sit nullam proin.</p>
+            </div>
+        </div>
+
     </header>
 
     <!-- main section -->
