--- a/index.html
+++ b/index.html
@@ -2,116 +2,156 @@
 <html lang="en" data-theme="light">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- daisyUI and tailwind CDN -->
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.tailwindcss.com"></script>
+  <!-- daisyUI and tailwind CDN -->
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.tailwindcss.com"></script>
 
-    <!-- font awesome CDN -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
-        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Hockey</title>
+  <!-- font awesome CDN -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <title>Hockey</title>
 </head>
 
 <body>
-    <!-- header section -->
-    <header class="md:container md:mx-auto">
-        <nav>
-            <div class="navbar bg-base-100">
-                <div class="navbar-start">
-                    <div class="dropdown">
-                        <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
-                                stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M4 6h16M4 12h8m-8 6h16" />
-                            </svg>
-                        </div>
-                        <ul tabindex="0"
-                            class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
-                            <li><a>Home</a></li>
-                            <li><a>About</a></li>
-                            <li><a>Pages</a></li>
-                            <li><a>Blog</a></li>
-                            <li><a>Contact</a></li>
-                        </ul>
-                    </div>
-                    <a class="text-4xl font-bold">Hockey<span class="text-[#FF4240]">’</span>s</a>
-                </div>
-                <div class="navbar-center hidden lg:flex">
-                    <ul class="menu menu-horizontal px-1 text-xl font-bold">
-                        <li class="hover:text-[#FF4240] duration-300 ease-in-out"><a>Home</a></li>
-                        <li class="hover:text-[#FF4240] duration-300 ease-in-out"><a>About</a></li>
-                        <li class="hover:text-[#FF4240] duration-300 ease-in-out"><a>Pages</a></li>
-                        <li class="hover:text-[#FF4240] duration-300 ease-in-out"><a>Blog</a></li>
-                        <li class="hover:text-[#FF4240] duration-300 ease-in-out"><a>Contact</a></li>
-                    </ul>
-                </div>
-                <div class="navbar-end flex space-x-5">
-                    <h6> <i class="fa-solid fa-magnifying-glass"></i></h6>
-                    <a class="btn bg-[#FF4240] text-white text-lg font-bold">Get Ticket</a>
-                </div>
+  <!-- header section -->
+  <header class="md:container md:mx-auto mb-32">
+    <nav>
+      <div class="navbar bg-base-100">
+        <div class="navbar-start">
+          <div class="dropdown">
+            <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
+              </svg>
             </div>
-        </nav>
-
-        <!-- carousel -->
-        <div class="relative px-3">
-            <div class="carousel w-full rounded-xl lg:h-[550px]">
-                <div id="slide1" class="carousel-item relative w-full">
-                    <img src="Images/1.png" class="w-full" />
-                    <div class="absolute bottom-6 left-32 lg:left-6 flex space-x-3 justify-between">
-                        <a href="#slide4" class="btn btn-circle bg-slate-900 text-white">❮</a>
-                        <a href="#slide2" class="btn btn-circle bg-slate-900 text-white">❯</a>
-                    </div>
-                </div>
-                <div id="slide2" class="carousel-item relative w-full">
-                    <img src="Images/2.png"
-                        class="w-full" />
-                    <div class="absolute bottom-6 left-32 lg:left-6  flex space-x-3 justify-between">
-                        <a href="#slide1" class="btn btn-circle bg-slate-900 text-white">❮</a>
-                        <a href="#slide3" class="btn btn-circle bg-slate-900 text-white">❯</a>
-                    </div>
-                </div>
-                <div id="slide3" class="carousel-item relative w-full">
-                    <img src="Images/3.png"
-                        class="w-full" />
-                    <div class="absolute bottom-6 left-32 lg:left-6  flex space-x-3 justify-between">
-                        <a href="#slide2" class="btn btn-circle bg-slate-900 text-white">❮</a>
-                        <a href="#slide4" class="btn btn-circle bg-slate-900 text-white">❯</a>
-                    </div>
-                </div>
-                <div id="slide4" class="carousel-item relative w-full">
-                    <img src="Images/4.png"
-                        class="w-full" />
-                    <div class="absolute bottom-6 left-32 lg:left-6  flex space-x-3 justify-between">
-                        <a href="#slide3" class="btn btn-circle bg-slate-900 text-white">❮</a>
-                        <a href="#slide1" class="btn btn-circle bg-slate-900 text-white">❯</a>
-                    </div>
-                </div>
-
-            </div>
-            <div
-                class=" lg:w-1/3 lg:absolute  bottom-12 right-12 bg-[#131318] py-12 px-6 text-white space-y-6 rounded-xl">
-                <h1>Meet all the heroes from the field</h1>
-                <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in
-                    sit nullam proin.</p>
-            </div>
+            <ul tabindex="0" class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+              <li><a>Home</a></li>
+              <li><a>About</a></li>
+              <li><a>Pages</a></li>
+              <li><a>Blog</a></li>
+              <li><a>Contact</a></li>
+            </ul>
+          </div>
+          <a class="text-4xl font-bold">Hockey<span class="text-[#FF4240]">’</span>s</a>
         </div>
+        <div class="navbar-center hidden lg:flex">
+          <ul class="menu menu-horizontal px-1 text-xl font-bold">
+            <li class="hover:text-[#FF4240] duration-300 ease-in-out">
+              <a>Home</a>
+            </li>
+            <li class="hover:text-[#FF4240] duration-300 ease-in-out">
+              <a>About</a>
+            </li>
+            <li class="hover:text-[#FF4240] duration-300 ease-in-out">
+              <a>Pages</a>
+            </li>
+            <li class="hover:text-[#FF4240] duration-300 ease-in-out">
+              <a>Blog</a>
+            </li>
+            <li class="hover:text-[#FF4240] duration-300 ease-in-out">
+              <a>Contact</a>
+            </li>
+          </ul>
+        </div>
+        <div class="navbar-end flex space-x-5">
+          <h6><i class="fa-solid fa-magnifying-glass"></i></h6>
+          <a class="btn bg-[#FF4240] text-white text-lg font-bold">Get Ticket</a>
+        </div>
+      </div>
+    </nav>
 
-    </header>
+    <!-- carousel -->
+    <div class="relative px-3">
+      <div class="carousel w-full rounded-xl lg:h-[550px]">
+        <div id="slide1" class="carousel-item relative w-full">
+          <img src="Images/1.png" class="w-full" />
+          <div class="absolute bottom-6 left-32 lg:left-6 flex space-x-3 justify-between">
+            <a href="#slide4" class="btn btn-circle bg-slate-900 text-white">❮</a>
+            <a href="#slide2" class="btn btn-circle bg-slate-900 text-white">❯</a>
+          </div>
+        </div>
+        <div id="slide2" class="carousel-item relative w-full">
+          <img src="Images/2.png" class="w-full" />
+          <div class="absolute bottom-6 left-32 lg:left-6 flex space-x-3 justify-between">
+            <a href="#slide1" class="btn btn-circle bg-slate-900 text-white">❮</a>
+            <a href="#slide3" class="btn btn-circle bg-slate-900 text-white">❯</a>
+          </div>
+        </div>
+        <div id="slide3" class="carousel-item relative w-full">
+          <img src="Images/3.png" class="w-full" />
+          <div class="absolute bottom-6 left-32 lg:left-6 flex space-x-3 justify-between">
+            <a href="#slide2" class="btn btn-circle bg-slate-900 text-white">❮</a>
+            <a href="#slide4" class="btn btn-circle bg-slate-900 text-white">❯</a>
+          </div>
+        </div>
+        <div id="slide4" class="carousel-item relative w-full">
+          <img src="Images/4.png" class="w-full" />
+          <div class="absolute bottom-6 left-32 lg:left-6 flex space-x-3 justify-between">
+            <a href="#slide3" class="btn btn-circle bg-slate-900 text-white">❮</a>
+            <a href="#slide1" class="btn btn-circle bg-slate-900 text-white">❯</a>
+          </div>
+        </div>
+      </div>
+      <div class="lg:w-1/3 lg:absolute bottom-12 right-12 bg-[#131318] py-12 px-6 text-white space-y-6 rounded-xl">
+        <h1>Meet all the heroes from the field</h1>
+        <p>
+          Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+          turpis placerat dolor. Purus urna in sit nullam proin.
+        </p>
+      </div>
+    </div>
+  </header>
 
-    <!-- main section -->
-    <main class="md:container md:mx-auto">
+  <!-- main section -->
+  <main class="md:container md:mx-auto">
+    <!-- Hockey Club -->
 
-    </main>
+    <section class="mb-32 space-y-5">
+      <div class="text-center space-y-6">
+        <h1 class="text-4xl font-bold">Professional Hockeys Club</h1>
+        <p class="text-[#131318]">
+          Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+          turpis placerat <br />dolor. Purus urna in sit nullam proin.
+        </p>
+      </div>
+      <!-- grid-cols-1 ml-22 md:grid-cols-3 md:ml-32 lg:ml-60 -->
+      <div class="grid grid-cols-3">
+        <div class="relative w-64 items-center">
+          <div class="radial-progress text-[#E7E7E8]" style="--value:87;" role="progressbar"><span
+              class="text-[#131318] font-extrabold text-xl">87%</span>
+          </div>
+          <div class="absolute right-0 left-0 radial-progress text-[#FF4240] rotate-90" style="--value:87;"
+            role="progressbar">
+          </div>
+          <h4>Prayer Facility</h4>
+          <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+        </div>
+        <div class="relative">
+          <div class="radial-progress text-[#E7E7E8]" style="--value:87;" role="progressbar"><span
+              class="text-[#131318] font-extrabold text-xl">87%</span></div>
+          <div class="absolute right-0 left-0 radial-progress text-[#FF4240] rotate-90" style="--value:87;"
+            role="progressbar">
+          </div>
+        </div>
+        <div class="relative">
+          <div class="radial-progress text-[#E7E7E8]" style="--value:87;" role="progressbar"><span
+              class="text-[#131318] font-extrabold text-xl">87%</span></div>
+          <div class="absolute right-0 left-0 radial-progress text-[#FF4240] rotate-90" style="--value:87;"
+            role="progressbar">
+          </div>
+        </div>
+      </div>
 
-    <!-- footer section -->
-    <footer>
+    </section>
+  </main>
 
-    </footer>
+  <!-- footer section -->
+  <footer></footer>
 </body>
 
 </html>
