--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
     integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <title>Hockey</title>
 </head>
 
@@ -37,7 +38,10 @@
               <li><a>Contact</a></li>
             </ul>
           </div>
+
           <a class="text-4xl font-bold">Hockey<span class="text-[#FF4240]">’</span>s</a>
+
+
         </div>
         <div class="navbar-center hidden lg:flex">
           <ul class="menu menu-horizontal px-1 text-xl font-bold">
@@ -60,7 +64,7 @@
         </div>
         <div class="navbar-end flex space-x-5">
           <h6><i class="fa-solid fa-magnifying-glass"></i></h6>
-          <a class="btn bg-[#FF4240] text-white text-lg font-bold">Get Ticket</a>
+          <a class="btn bg-[#FF4240] text-white hover:bg-red-500 text-lg font-bold">Get Ticket</a>
         </div>
       </div>
     </nav>
@@ -146,7 +150,337 @@
           </div>
         </div>
       </div>
+    </section>
 
+    <!-- New products -->
+    <section class="mb-32">
+      <div class="space-y-5 text-center">
+        <h1 class="text-4xl font-bold">Our New Products</h1>
+        <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat <br>
+          dolor. Purus urna in sit
+          nullam proin.</p>
+      </div>
+      <!-- products card -->
+      <div class="flex gap-6 lg:flex-row sm:flex-col flex-col justify-center items-center mt-12 p-4">
+        <div class="space-y-5">
+          <!-- card 1 -->
+          <div class="card card-side bg-base-100  border-2 p-5 ">
+            <figure>
+              <img src="Images/5.png" alt="Movie" />
+            </figure>
+            <div class="card-body space-y-5">
+              <div class="grid grid-cols-3 gap-4">
+                <div class="flex gap-2">
+                  <div><i class="fa-solid fa-star text-[#F99808]"></i></div>
+                  <div>
+                    <h6>5.0</h6>
+                  </div>
+                </div>
+                <div class="flex gap-2">
+                  <div><i class="fa-solid fa-eye"></i></div>
+                  <div>
+                    <h6>20</h6>
+                  </div>
+                </div>
+                <div class="flex gap-2">
+                  <div><i class="fa-regular fa-heart"></i></i></div>
+                  <div>
+                    <h6>200</h6>
+                  </div>
+                </div>
+
+              </div>
+              <div class="space-y-3">
+                <h4>World Cup Flags Football</h4>
+                <p>Dolor sit amet consectetur. Ut urna diam <br>quis sagittis.</p>
+              </div>
+              <div class="flex gap-5">
+                <div>
+                  <h5 class="text-lg text-[#FF4240] font-bold">Price - $22.00</h5>
+                </div>
+                <div>
+                  <h6><i class="fa-solid fa-cart-shopping"></i> Delivery Fee : Free</h6>
+                </div>
+
+              </div>
+            </div>
+          </div>
+          <div class="card card-side bg-base-100  border-2 p-5 ">
+            <figure>
+              <img src="Images/6.png" alt="Movie" />
+            </figure>
+            <div class="card-body space-y-5">
+              <div class="grid grid-cols-3 gap-4">
+                <div class="flex gap-2">
+                  <div><i class="fa-solid fa-star text-[#F99808]"></i></div>
+                  <div>
+                    <h6>5.0</h6>
+                  </div>
+                </div>
+                <div class="flex gap-2">
+                  <div><i class="fa-solid fa-eye"></i></div>
+                  <div>
+                    <h6>20</h6>
+                  </div>
+                </div>
+                <div class="flex gap-2">
+                  <div><i class="fa-regular fa-heart"></i></i></div>
+                  <div>
+                    <h6>200</h6>
+                  </div>
+                </div>
+
+              </div>
+              <div class="space-y-3">
+                <h4>World Cup Flags Football</h4>
+                <p>Dolor sit amet consectetur. Ut urna diam <br>quis sagittis.</p>
+              </div>
+              <div class="flex gap-5">
+                <div>
+                  <h5 class="text-lg text-[#FF4240] font-bold">Price - $22.00</h5>
+                </div>
+                <div>
+                  <h6><i class="fa-solid fa-cart-shopping"></i> Delivery Fee : Free</h6>
+                </div>
+
+              </div>
+            </div>
+          </div>
+          <div class="card card-side bg-base-100  border-2 p-5 ">
+            <figure>
+              <img src="Images/7.png" alt="Movie" />
+            </figure>
+            <div class="card-body space-y-5">
+              <div class="grid grid-cols-3 gap-4">
+                <div class="flex gap-2">
+                  <div><i class="fa-solid fa-star text-[#F99808]"></i></div>
+                  <div>
+                    <h6>5.0</h6>
+                  </div>
+                </div>
+                <div class="flex gap-2">
+                  <div><i class="fa-solid fa-eye"></i></div>
+                  <div>
+                    <h6>20</h6>
+                  </div>
+                </div>
+                <div class="flex gap-2">
+                  <div><i class="fa-regular fa-heart"></i></i></div>
+                  <div>
+                    <h6>200</h6>
+                  </div>
+                </div>
+
+              </div>
+              <div class="space-y-3">
+                <h4>World Cup Flags Football</h4>
+                <p>Dolor sit amet consectetur. Ut urna diam <br>quis sagittis.</p>
+              </div>
+              <div class="flex gap-5">
+                <div>
+                  <h5 class="text-lg text-[#FF4240] font-bold">Price - $22.00</h5>
+                </div>
+                <div>
+                  <h6><i class="fa-solid fa-cart-shopping"></i> Delivery Fee : Free</h6>
+                </div>
+
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="space-y-5">
+          <!-- card 1 -->
+          <div class=" card card-side bg-base-100  border-2 p-5 ">
+            <figure>
+              <img src="Images/8.png" alt="Movie" />
+            </figure>
+            <div class="card-body space-y-5">
+              <div class="grid grid-cols-3 gap-4">
+                <div class="flex gap-2">
+                  <div><i class="fa-solid fa-star text-[#F99808]"></i></div>
+                  <div>
+                    <h6>5.0</h6>
+                  </div>
+                </div>
+                <div class="flex gap-2">
+                  <div><i class="fa-solid fa-eye"></i></div>
+                  <div>
+                    <h6>20</h6>
+                  </div>
+                </div>
+                <div class="flex gap-2">
+                  <div><i class="fa-regular fa-heart"></i></i></div>
+                  <div>
+                    <h6>200</h6>
+                  </div>
+                </div>
+
+              </div>
+              <div class="space-y-3">
+                <h4>World Cup Flags Football</h4>
+                <p>Dolor sit amet consectetur. Ut urna diam <br>quis sagittis.</p>
+              </div>
+              <div class="flex gap-5">
+                <div>
+                  <h5 class="text-lg text-[#FF4240] font-bold">Price - $22.00</h5>
+                </div>
+                <div>
+                  <h6><i class="fa-solid fa-cart-shopping"></i> Delivery Fee : Free</h6>
+                </div>
+
+              </div>
+            </div>
+          </div>
+          <div class="card card-side bg-base-100  border-2 p-5 ">
+            <figure>
+              <img src="Images/9.png" alt="Movie" />
+            </figure>
+            <div class="card-body space-y-5">
+              <div class="grid grid-cols-3 gap-4">
+                <div class="flex gap-2">
+                  <div><i class="fa-solid fa-star text-[#F99808]"></i></div>
+                  <div>
+                    <h6>5.0</h6>
+                  </div>
+                </div>
+                <div class="flex gap-2">
+                  <div><i class="fa-solid fa-eye"></i></div>
+                  <div>
+                    <h6>20</h6>
+                  </div>
+                </div>
+                <div class="flex gap-2">
+                  <div><i class="fa-regular fa-heart"></i></i></div>
+                  <div>
+                    <h6>200</h6>
+                  </div>
+                </div>
+
+              </div>
+              <div class="space-y-3">
+                <h4>World Cup Flags Football</h4>
+                <p>Dolor sit amet consectetur. Ut urna diam <br>quis sagittis.</p>
+              </div>
+              <div class="flex gap-5">
+                <div>
+                  <h5 class="text-lg text-[#FF4240] font-bold">Price - $22.00</h5>
+                </div>
+                <div>
+                  <h6><i class="fa-solid fa-cart-shopping"></i> Delivery Fee : Free</h6>
+                </div>
+
+              </div>
+            </div>
+          </div>
+          <div class="card card-side bg-base-100  border-2 p-5 ">
+            <figure>
+              <img src="Images/10.png" alt="Movie" />
+            </figure>
+            <div class="card-body space-y-5">
+              <div class="grid grid-cols-3 gap-4">
+                <div class="flex gap-2">
+                  <div><i class="fa-solid fa-star text-[#F99808]"></i></div>
+                  <div>
+                    <h6>5.0</h6>
+                  </div>
+                </div>
+                <div class="flex gap-2">
+                  <div><i class="fa-solid fa-eye"></i></div>
+                  <div>
+                    <h6>20</h6>
+                  </div>
+                </div>
+                <div class="flex gap-2">
+                  <div><i class="fa-regular fa-heart"></i></i></div>
+                  <div>
+                    <h6>200</h6>
+                  </div>
+                </div>
+
+              </div>
+              <div class="space-y-3">
+                <h4>World Cup Flags Football</h4>
+                <p>Dolor sit amet consectetur. Ut urna diam <br>quis sagittis.</p>
+              </div>
+              <div class="flex gap-5">
+                <div>
+                  <h5 class="text-lg text-[#FF4240] font-bold">Price - $22.00</h5>
+                </div>
+                <div>
+                  <h6><i class="fa-solid fa-cart-shopping"></i> Delivery Fee : Free</h6>
+                </div>
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+    </section>
+
+    <!-- Clients Question -->
+    <section class="mb-32 space-y-12 p-5">
+      <div class="space-y-5 text-center">
+        <h1 class="text-4xl font-bold">Clients Question</h1>
+        <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat <br>
+          dolor. Purus urna in sit
+          nullam proin.</p>
+      </div>
+
+      <!-- FAQ container -->
+      <div class="md:flex md:justify-center gap-10 p-4 md:p-4 lg:p-0 border-2 rounded-2xl space-y-5 md:space-y-0">
+        <div>
+          <img src="Images/11.png" alt="">
+        </div>
+        <div class="flex items-center">
+          <div class="">
+            <div class="collapse collapse-plus">
+              <input type="radio" name="my-accordion-3" checked="checked" />
+              <div class="collapse-title text-xl font-medium">Our Equipment</div>
+              <div class="collapse-content">
+                <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim <br>sagittis turpis in magna.
+                </p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">Hockey Training</div>
+              <div class="collapse-content">
+                <p>hello</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">Private Lessons</div>
+              <div class="collapse-content">
+                <p>hello</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus">
+              <input type="radio" name="my-accordion-3" checked="checked" />
+              <div class="collapse-title text-xl font-medium">Ski Touring</div>
+              <div class="collapse-content">
+                <p>hello</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">Booking</div>
+              <div class="collapse-content">
+                <p>hello</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">Pricings</div>
+              <div class="collapse-content">
+                <p>hello</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
   </main>
 
